--- a/app/src/main/res/layout/dialog_currency_list.xml
+++ b/app/src/main/res/layout/dialog_currency_list.xml
@@ -9,41 +9,30 @@
     <!-- Header: title centered + close -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:id="@+id/titleRow"
+        android:layout_height="110dp">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:gravity="center"
             android:text="@string/title_base_currency"
             android:textColor="@color/text"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginTop="60dp"/>
 
         <ImageButton
             android:id="@+id/btnClose"
             style="@style/Widget.Rustic.IconButton"
             android:layout_width="36dp"
+            android:layout_marginTop="20dp"
             android:layout_height="36dp"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/ic_close_24"
-            android:contentDescription="@string/close" />
+            android:layout_marginStart="345dp"
+            android:contentDescription="@string/close"
+            android:src="@drawable/ic_close_24" />
     </RelativeLayout>
-
-    <EditText
-        android:id="@+id/searchInput"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bg_search_field"
-        android:hint="@string/search_currency"
-        android:inputType="text"
-        android:paddingStart="14dp"
-        android:paddingEnd="14dp"
-        android:singleLine="true"
-        android:textColor="@color/text"
-        android:textColorHint="@color/text_hint" />
 
     <!-- MULTI ONLY: selected chips 3-in-row -->
     <LinearLayout
@@ -70,10 +59,24 @@
             android:scrollbars="none" />
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/searchInput"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_search_field"
+        android:hint="@string/search_currency"
+        android:inputType="text"
+        android:paddingStart="14dp"
+        android:paddingEnd="14dp"
+        android:singleLine="true"
+        android:textColor="@color/text"
+        android:textColorHint="@color/text_hint" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/currencyList"
         android:layout_width="match_parent"
-        android:layout_height="420dp"
+        android:layout_height="463dp"
         android:layout_marginTop="10dp"
         android:overScrollMode="never"
         android:scrollbars="none" />
