--- a/app/src/main/res/layout/dialog_scan_price.xml
+++ b/app/src/main/res/layout/dialog_scan_price.xml
@@ -38,7 +38,7 @@
         android:id="@+id/hintCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="60dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         app:cardBackgroundColor="@color/surface_2"
@@ -217,7 +217,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
-    <!-- индикатор (как было) -->
+    <!-- индикатор -->
     <View
         android:id="@+id/greenDot"
         android:layout_width="10dp"
