--- a/app/src/main/res/layout/row_currency.xml
+++ b/app/src/main/res/layout/row_currency.xml
@@ -14,6 +14,9 @@
         android:layout_width="34dp"
         android:layout_height="34dp"
         android:layout_marginEnd="12dp"
+        android:scaleType="centerCrop"
+        android:clipToOutline="true"
+        android:background="@drawable/bg_circle_mask"
         android:contentDescription="@string/cd_currency_icon"
         android:src="@drawable/ic_currency_placeholder" />
 
