--- a/app/src/main/res/layout/row_currency_chip.xml
+++ b/app/src/main/res/layout/row_currency_chip.xml
@@ -11,6 +11,9 @@
 
     <ImageView
         android:id="@+id/icon"
+        android:scaleType="centerCrop"
+        android:clipToOutline="true"
+        android:background="@drawable/bg_circle_mask"
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:contentDescription="@string/cd_currency_icon" />
