--- a/app/src/main/res/layout/dialog_scan_price.xml
+++ b/app/src/main/res/layout/dialog_scan_price.xml
@@ -25,8 +25,8 @@
         android:layout_height="0dp"
         android:background="@drawable/bg_camera_overlay"
         app:layout_constraintTop_toTopOf="parent"
-        android:clickable="false"
-        android:focusable="false"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -158,7 +158,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="34dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:strokeWidth="0dp"
         android:background="@drawable/bg_glow_orange"
